<resources>
    <string name="app_name">Linkit</string>
    <string name="create_folder">Create</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="log_out">Log out</string>
    <string name="folder">Folders</string>
    <string name="edit">Edit%s</string>
    <string name="todo">TODO</string>
    <string name="new_folder">New Folder</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="web_links">Web links</string>
    <string name="url">Url</string>
    <string name="add">Add</string>
    <string name="url_from_clipboard">Create bookmark</string>
    <string name="prompt">Assign To Folder</string>
    <string name="add_file">Add file</string>
    <string name="messageEmptyPage">No urls or data</string>
    <string name="assign_to_folder">Assign to Folder</string>
    <string name="notSelected">Not selected</string>
    <string name="select_folder">Select folder</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_folders">Choose folders</string>
    <string name="title_activity_recieve_url">RecieveUrlActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="add_folder">Add Folder</string>
    <string name="delete_folder_title">Delete Folder</string>
    <string name="delete_folder_description">Are you sure want to delete the folder \'%s\'?</string>
    <string name="cancel">Cancel</string>
    <string name="authorization">Sign in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Sign up with email</string>
    <string name="set_password">Password setup</string>
    <string name="update_password">Update password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up with email</string>
    <string name="error_passwords_match">Password do not match</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="toast_reset_password">A letter has been sent to your email \'%s\' with a link to change your password</string>
    <string name="toast_verify_email">A letter has been sent to your email \'%s\' with a link to verify your account</string>
    <string name="verify_email">Verify email</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="setup_password">Set Password</string>
    <string name="send">Send</string>
    <string name="password_set">Password set</string>
    <string name="password_updated">Password updated</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <string name="errorMessageAuthUserCollision">
        A user with such account is already registered.\n\nTo setup password you need to log in with your \'%s\' and go to profile settings.
    </string>
    <string name="preview">Preview</string>
    <string name="auth_policy">By signing up, you agree to UnboxMe’s\nTerms of Use and Privacy Policy.</string>
    <string name="sing_in_button_text">Already have an account?</string>
    <string name="rename">Rename</string>
    <string name="rename_folder">Rename folder</string>
    <string name="reorder">Reorder</string>
    <plurals name="dialog_delete_link_title">
        <item quantity="one">Delete link</item>
        <item quantity="other">Delete links</item>
    </plurals>
    <plurals name="dialog_delete_link_description">
        <item quantity="one">Are you sure delete link?</item>
        <item quantity="other">Are you sure delete %d links?</item>
    </plurals>

</resources>