<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minWidth="300dp">


    <TextView
        android:id="@+id/tvSelectViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginPrimary"
        android:text="@string/select_folder"
        android:textAppearance="@style/Theme.Linkit.Text.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llSelectFolderList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectViewTitle" />

    <TextView
        android:id="@+id/tvSelectFolderCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPrimary"
        android:layout_marginEnd="@dimen/marginPrimary"
        android:drawablePadding="@dimen/marginSecondary"
        android:text="@string/create_folder"
        android:textAppearance="@style/Theme.Linkit.Text.Body1"
        android:textSize="@dimen/textSizePrimary"
        app:drawableStartCompat="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSelectViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/llSelectFolderList" />

    <Button
        android:id="@+id/btnSelectFolderAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSecondary"
        android:layout_marginEnd="@dimen/marginPrimary"
        android:layout_marginBottom="@dimen/marginPrimary"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectFolderCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>