<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/tvFolderDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginPrimary"
        android:text="@string/delete_folder_title"
        android:textAppearance="@style/Theme.Linkit.TextAppearanceTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFolderDeleteDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPrimary"
        android:layout_marginEnd="@dimen/marginPrimary"
        android:textAppearance="@style/Theme.Linkit.TextAppearanceRegular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvFolderDeleteTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvFolderDeleteTitle"
        tools:text="Are you sure want to delete selected folder?" />

    <Button
        android:id="@+id/btnFolderDeleteCancel"
        style="@style/Theme.Linkit.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSecondary"
        android:layout_marginEnd="@dimen/marginSecondary"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnFolderDeleteAccept"
        app:layout_constraintEnd_toStartOf="@+id/btnFolderDeleteAccept"
        app:layout_constraintTop_toBottomOf="@+id/tvFolderDeleteDescription" />

    <Button
        android:id="@+id/btnFolderDeleteAccept"
        style="@style/Theme.Linkit.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSecondary"
        android:layout_marginBottom="@dimen/marginPrimary"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvFolderDeleteDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvFolderDeleteDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>