<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.akopyan757.linkit.viewmodel.AuthSignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/ivAuthSignUpBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBig"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/tvAuthSignUpTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAuthSignUpEmail"
            style="@style/Theme.Linkit.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:nextFocusDown="@id/tilAuthSignUpPassword"
            app:layout_constraintEnd_toEndOf="@+id/tvAuthSignUpTitle"
            app:layout_constraintStart_toStartOf="@+id/tvAuthSignUpTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthSignUpTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAuthSignUpEmail"
                style="@style/Theme.Linkit.EditText.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAuthSignUpPassword"
            style="@style/Theme.Linkit.TextInputLayout.Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:nextFocusDown="@id/tilAuthSignUpConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/tvAuthSignUpTitle"
            app:layout_constraintStart_toStartOf="@id/tvAuthSignUpTitle"
            app:layout_constraintTop_toBottomOf="@+id/tilAuthSignUpEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpPassword"
                style="@style/Theme.Linkit.EditText.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAuthSignUpConfirmPassword"
            style="@style/Theme.Linkit.TextInputLayout.Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            app:layout_constraintEnd_toEndOf="@id/tvAuthSignUpTitle"
            app:layout_constraintStart_toStartOf="@id/tvAuthSignUpTitle"
            app:layout_constraintTop_toBottomOf="@+id/tilAuthSignUpPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpConfirmPassword"
                style="@style/Theme.Linkit.EditText.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordConfirm}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAuthSignUp"
            style="@style/Theme.Linkit.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonAuthHeight"
            android:layout_margin="@dimen/marginBig"
            android:enabled="@{viewModel.buttonSignInEnable}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAuthSignUpTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:text="@string/registration"
            android:textAppearance="@style/Theme.Linkit.Text.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@fraction/authTitleRatio" />

        <TextView
            android:id="@+id/tvAuthSignUpError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:gravity="center"
            android:text="@{viewModel.error}"
            android:textAppearance="@style/Theme.Linkit.TextAppearanceRegular"
            android:textColor="@color/error"
            app:layout_constraintEnd_toEndOf="@+id/tilAuthSignUpPassword"
            app:layout_constraintStart_toStartOf="@+id/tilAuthSignUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilAuthSignUpConfirmPassword"
            app:visibility="@{viewModel.errorVisible}"
            tools:text="Error" />

        <ProgressBar
            android:id="@+id/pbAuthSignUpLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthSignUpError"
            app:layout_constraintVertical_bias="0.58000004"
            app:visibility="@{viewModel.progress}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>