<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.akopyan757.linkit.viewmodel.AuthStartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/tvAuthStartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:text="@string/app_name"
            android:textAppearance="@style/Theme.Linkit.Text.Title"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@fraction/authTitleRatio" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAuthStartSignUp"
            style="@style/Theme.Linkit.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonAuthHeight"
            android:text="@string/sign_up"
            android:backgroundTint="@color/disabled"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            app:layout_constraintBottom_toTopOf="@+id/tvAuthStartTermsAndPolicy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthStartTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAuthService"
            style="@style/Theme.Linkit.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonAuthHeight"
            android:layout_marginTop="@dimen/marginSecondary"
            android:drawableLeft="@drawable/ic_login_icon"
            android:text="@string/buttonText"
            android:textColor="@color/buttonTextColor"
            app:backgroundTint="@color/buttonBackgroundColor"
            app:layout_constraintEnd_toEndOf="@+id/btnAuthStartSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnAuthStartSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnAuthStartSignUp" />


        <TextView
            android:id="@+id/tvAuthStartTermsAndPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginPrimary"
            android:gravity="center"
            android:text="@string/auth_policy"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pbAuthStartLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvAuthStartTermsAndPolicy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthStartSignIn"
            app:layout_constraintVertical_bias="0.5"
            app:visibility="@{viewModel.progress}" />

        <TextView
            android:id="@+id/tvAuthStartSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBig"
            android:text="@string/sing_in_button_text"
            android:textAppearance="@style/Theme.Linkit.Text.Body1.Bold"
            app:layout_constraintEnd_toEndOf="@+id/btnAuthService"
            app:layout_constraintStart_toStartOf="@+id/btnAuthService"
            app:layout_constraintTop_toBottomOf="@+id/btnAuthService" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>