<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.akopyan757.linkit.viewmodel.ProfileSetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSetPasswordPassword"
            style="@style/Theme.Linkit.TextInputLayout.Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:nextFocusDown="@id/tilSetPasswordConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/tvSetPasswordTitle"
            app:layout_constraintStart_toStartOf="@+id/tvSetPasswordTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSetPasswordTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSetPassword"
                style="@style/Theme.Linkit.EditText.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSetPasswordConfirmPassword"
            style="@style/Theme.Linkit.TextInputLayout.Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tilSetPasswordPassword"
            app:layout_constraintStart_toStartOf="@+id/tilSetPasswordPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilSetPasswordPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSetPasswordConfirmPassword"
                style="@style/Theme.Linkit.EditText.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordConfirm}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSetPasswordSend"
            style="@style/Theme.Linkit.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonAuthHeight"
            android:layout_margin="@dimen/marginBig"
            android:enabled="@{viewModel.buttonSignInEnable}"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSetPasswordTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:text="@string/set_password"
            android:textAppearance="@style/Theme.Linkit.Text.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@fraction/authTitleRatio" />

        <TextView
            android:id="@+id/tvSetPasswordUpError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:gravity="center"
            android:text="@{viewModel.error}"
            android:textAppearance="@style/Theme.Linkit.TextAppearanceRegular"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@+id/tilSetPasswordPassword"
            app:layout_constraintStart_toStartOf="@+id/tilSetPasswordPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilSetPasswordConfirmPassword"
            app:visibility="@{viewModel.errorVisible}"
            tools:text="Error" />

        <ImageView
            android:id="@+id/ivSetPasswordBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBig"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/tvSetPasswordTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ProgressBar
            android:id="@+id/pbSetPasswordLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnSetPasswordSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSetPasswordUpError"
            app:layout_constraintVertical_bias="0.61"
            app:visibility="@{viewModel.progress}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>